组合求和标准版本